<resources>
    <string name="app_name">Game</string>
    <string name="instruction_text">Choose rock, paper or scissors</string>
    <string name="button_rock">Rock</string>
    <string name="button_paper">Paper</string>
    <string name="button_scissors">Scissors</string>
    <string name="computer_choice_text"></string>
    <string name="winner_text"></string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_text">Welcome to the Rock, Paper, Scissors Game!</string>
    <string name="rules_text">These are the rules:</string>
    <string name="enter_button">Play</string>

</resources>
